# python-lenses

./: @Gurkenglas, in your use case, it seems .py  pyproject.toml  test.py
docs/: api.rst
lenses/: functorisor.py
lenses/optics/: base.py  traversals.py
